[package]
name = "nft-hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

xclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
promise_nft       = {path = "../../packages/promise-nft", version = "0.1.0"}
cosmwasm-std      = {version = "1.2.0", features = ["stargate", "staking"]}
cosmwasm-storage  = { version = "1.2.0", features = ["iterator"] }
schemars          = "0.8.1"
serde             = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror         = "1.0"
cw-storage-plus   = { version = "1.0.1" } 
cosmwasm-schema   = "1.2.0"
cw721-base        = { version = "0.17.0", features = ["library"] }
protobuf          = { version = "2", features = ["with-bytes"] }


[profile.dev]
overflow-checks = true